[Update] summary with mock data and basic styling

--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,33 @@ b {
   font-weight: 700;
 }
 
+i {
+  font-style: italic;
+}
+
 .border-5 {
   border: 5px solid;
+}
+
+.pad-right-10 {
+  padding-right: 10px;
+}
+
+.pad-bottom-10 {
+  padding-bottom: 10px;
+}
+
+.upper-case {
+  text-transform: uppercase;
 }
 
 .h1 {
   font-size: 3em;
   margin: 25px 10px;
+}
+
+.h2 {
+  font-size: 2em;
 }
 
 .p {
@@ -103,8 +123,14 @@ b {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: auto;
+  gap: 2em;
+  padding: 10px 20px;
   /* TODO: remove */
   border-color: palevioletred;
+}
+
+.summary__label {
+  font-size: 0.85em;
 }
 
 .show-title {
@@ -114,15 +140,32 @@ b {
 .classification {
   grid-column: 1 / 2;
 }
+
 .awards {
   grid-column: 2 / 4;
 }
+
 .description {
   grid-column: 1 / 4;
+  font-size: 1em;
+  margin: 0;
 }
+
 .instructors {
   grid-column: 1 / 2;
 }
+
+.instructors-ul {
+  line-height: 1.5em;
+}
+
 .members {
   grid-column: 2 / 4;
+}
+
+.members-ul {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  line-height: 1.5em;
 }
