--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,14 @@
+/* global variables */
+:root {
+  --apache-gold: rgb(255, 195, 0);
+  --apache-cardinal: rgb(123, 25, 30);
+}
+
 /* general */
 html {
   font-size: 17px;
+  color: #fff;
+  background-color: #000;
 }
 
 b {
@@ -53,6 +61,7 @@ i {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  background-color: var(--apache-cardinal);
   /* TODO: remove */
   border-color: red;
 }
@@ -93,6 +102,7 @@ i {
 .year {
   grid-column: 1 / 3;
   text-align: center;
+  color: var(--apache-gold);
   /* TODO: remove */
   border-color: aqua;
 }
